--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "jquery": "^3.3.1",
+    "jspdf": "^1.3.5",
+    "jspdf-autotable": "^2.3.2",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-router": "^4.2.0",
