--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "dependencies": {
     "jquery": "^3.3.1",
     "jspdf": "^1.3.5",
+    "datatables.net": "^1.10.16",
+    "datatables.net-dt": "^1.10.16",
     "jspdf-autotable": "^2.3.2",
+    "pdfmake": "^0.1.36",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-router": "^4.2.0",
@@ -14,7 +17,7 @@
     "react-slick": "^0.23.1"
   },
   "scripts": {
-    "start": "set PORT=3700 && react-scripts start",
+    "start": "PORT=3700 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
